Initial working version of Recipe-based booking.